# Victorem

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: ping_pong_client.rs  ping_pong_server.rs
src/: business_logic_layer.rs  data_access_layer.rs  entities.rs  lib.rs
src/business_logic_layer/: id.rs  key.rs  mod.rs  protocol.rs  timer.rs  version.rs
tests/: test.rs
